elastic/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: http
    - name: transport
      port: 9300
      targetPort: transport
