elastic/elasticsearch/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: elasticsearch
spec:
  rules:
    - host: elasticsearch.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: 9200
